# BeagleAudio

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
cmake/: FindEventQueue.cmake  FindPoco.cmake
maximilian/: player.cpp
